Created script.js file and adding some modifications in index.html & leon.css files

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </head>
 
     <body>
+        <span class="up">Up</span>
         <!-- <i class="fas fa-gift	" style="font-size:60px;color:red;"></i> -->
         <div class="header">
             <div class="container">
@@ -173,7 +174,8 @@
                 </div>
             </div>
         </div>
-        <div class="about">
+        <div class="about"
+            id="about">
             <div class="container">
                 <h2 class="special_header">About</h2>
                 <p>Less is more work</p>
@@ -195,7 +197,8 @@
                 </div>
             </div>
         </div>
-        <div class="contact">
+        <div class="contact"
+            id="contact">
             <div class="container">
                 <h2 class="special_header">Contact</h2>
                 <p>We are born to create</p>
@@ -215,6 +218,7 @@
         <div class="footer">
             &copy; 2024 <span> Leon </span> All Right Reserved
         </div>
+        <script src="script.js"></script>
     </body>
 
 </html>
